--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "app_id" : "portal.miras-astana.kz",
-    "appname": "Miras International School",
+    "app_id" : "kz.miras-astana.portal.moodlemobile",
+    "appname": "Miras Int. School Astana",
     "versioncode" : "2015",
-    "versionname" : "3.1.3",
+    "versionname" : "0.0.1",
     "cache_expiration_time" : 300000,
     "default_lang" : "en",
     "languages": {"en": "English", "ru": "Русский"},
