--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
 	"siteurl”: “http://portal.miras-astana.kz"
+	"demo_sites": ""
     "gcmpn": "694767596569",
     "customurlscheme": "moodlemobile"
 }
