--- a/config.json
+++ b/config.json
@@ -1,14 +1,18 @@
 {
     "app_id" : "kz.miras-astana.portal.moodlemobile",
     "appname": "Miras Int. School Astana",
-    "versioncode" : "2015",
+    "desktopappname": "Miras Int School Astana",
+    "versioncode" : "2020",
     "versionname" : "0.0.1",
     "cache_expiration_time" : 300000,
     "default_lang" : "en",
     "languages": {"en": "English", "ru": "Русский"},
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
-	"siteurl": "http://portal.miras-astana.kz"
     "gcmpn": "694767596569",
-    "customurlscheme": "moodlemobile"
+    "customurlscheme": "moodlemobile",
+    "siteurl": "http://portal.miras-astana.kz/",
+    "skipssoconfirmation": "false",
+    "forcedefaultlanguage": "false",
+    "privacypolicy": "https://moodle.org/mod/page/view.php?id=8148"
 }
