--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "app_id" : "kz.miras-astana.portal.moodlemobile",
     "appname": "Miras Int. School Astana",
-    "desktopappname": "Miras Int School Astana",
+    "desktopappname": "Moodle Desktop",
     "versioncode" : "2020",
     "versionname" : "0.0.1",
     "cache_expiration_time" : 300000,
@@ -12,7 +12,7 @@
     "gcmpn": "694767596569",
     "customurlscheme": "moodlemobile",
     "siteurl": "http://portal.miras-astana.kz/",
-    "skipssoconfirmation": "false",
+    "skipssoconfirmation": "true",
     "forcedefaultlanguage": "false",
     "privacypolicy": "https://moodle.org/mod/page/view.php?id=8148"
 }
